Изменен заголовок, доб. картинка

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <title> Mukanova Karina. Lab 1</title>
     </head>
     <body>
-        <h1>Market</h1>
+        <h1>Market. Компьютерные комплектующие</h1>
 
         <dl>
-            <dt> Product</dt>
+            <dt> Product. Компьютерная клавиатура "Обычная"</dt>
             <dd>
+                <img src="https://mstatic.re-store.ru/upload/resize_cache/iblock/4c8/740_305_2/4c8c809cb2131f73db1c749652ebae48.jpg" width="300" ><br>
                 Это изумительный, самый лучший товар в мире! <br>
                 Цена: 1000 &#8381;
             </dd>
