Первый товар - мышь

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
                 Это изумительный, самый лучший товар в мире! <br>
                 Цена: 1000 &#8381;
             </dd>
+            <dt> Product. Компьютерная мышь "Обычная"</dt>
+            <dd>
+                <img src="https://www.sven.fi/upload/iblock_photos/mouse/rx-g830/010-photo-big.png" width="300" ><br>
+                Это изумительный, самый лучший товар в мире! <br>
+                Цена: 1000 &#8381;
+            </dd>
         </dl>
     </body>
 </html>
