изменение index.html и создание стилей для страницы

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> Mukanova Karina. Lab 1</title>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body onload="loaded()">
         <header>
@@ -26,19 +27,19 @@
     </main>
     <div class="card">
         <a href="product1.html">
-            <div class="image"><img src="e-cigarete.jpg"></div>
+            <div class="image"><img src="Без названия.jpg"></div>
             <div class="product-name">Мышь</div>
             <div class="price">100 &#8381;</div>
         </a>
         <div class="card">
             <a href="product2.html">
-                <div class="image"><img src="4.png"></div>
+                <div class="image"><img src="м.jpg"></div>
                 <div class="product-name">Монитор</div>
                 <div class="price">4563 &#8381;</div>
             </a>
             <div class="card">
                 <a href="product3.html">
-                    <div class="image"><img src="5.jpg"></div>
+                    <div class="image"><img src="у.jpg"></div>
                     <div class="product-name">Клавиатура</div>
                     <div class="price">752 &#8381;</div>
                 </a>
