--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang- "ru">
+<html lang= "ru">
     <head>
         <meta charset="utf-8">
         <title> Mukanova Karina. Lab 1</title>
         <link rel="stylesheet" href="main.css">
+        <script>
+            console.log("Всем привет");
+            console.error("Сообщение Ошибка");
+            console.warn("Сообщение предупреждение");
+        </script>
     </head>
     <body onload="loaded()">
         <header>
